# wolfSPDM

./: .gitignore  Makefile.am  README.md  autogen.sh  config.h.in  configure.ac  wolfspdm.pc.in
.github/workflows/: README.md  build-test.yml  codeql.yml  codespell.yml  compiler-warnings.yml  memory-check.yml  multi-compiler.yml  spdm-emu-test.yml  static-analysis.yml
src/: spdm_context.c  spdm_crypto.c  spdm_internal.h  spdm_kdf.c  spdm_msg.c  spdm_nuvoton.c  spdm_secured.c  spdm_session.c  spdm_transcript.c
test/: test_spdm.c  unit_test.c
wolfspdm/: spdm.h  spdm_error.h  spdm_nuvoton.h  spdm_types.h
